Fix scrollbar

--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ html {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scrollbar-gutter: stable;
 }
 
 body {
